--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.0.5",
     "@types/react-slick": "^0.23.10",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "react-responsive-carousel": "^3.2.23",
