--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
+    "@types/react-animate-on-scroll": "^2.1.5",
     "@types/react-dom": "^18.0.5",
     "@types/react-slick": "^0.23.10",
+    "animate.css": "^4.1.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "react-responsive-carousel": "^3.2.23",
