--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-slick": "^0.23.10",
     "animate.css": "^4.1.1",
-    "emailjs-com": "^3.2.0",
+    "axios": "^1.6.8",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
